C_IN_DEPTH/MCU/STM32_F103/stm32f103_projects_cube/modulate/.metadata/.plugins/org.eclipse.cdt.ui/010_spi2_max6675_ktype.build.log
14:22:31 **** Incremental Build of configuration Debug for project 010_spi2_max6675_ktype ****
make -j8 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m3 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F103xB -c -I../Core/Inc -I"F:/MCU/MODULATING_VALVE/010_spi2_max6675_ktype/Drivers/MAX6675" -I../Drivers/STM32F1xx_HAL_Driver/Inc -I../Drivers/STM32F1xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F1xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Core/Src/main.o"
../Core/Src/main.c:30:1: error: unknown type name 'ThermoCouple'
   30 | ThermoCouple sensor_th1;
      | ^~~~~~~~~~~~
../Core/Src/main.c: In function 'main':
../Core/Src/main.c:116:19: warning: implicit declaration of function 'ReadThermoCouple' [-Wimplicit-function-declaration]
  116 |                   ReadThermoCouple(&sensor_th1);
      |                   ^~~~~~~~~~~~~~~~
../Core/Src/main.c:117:33: error: request for member 'connected' in something not a structure or union
  117 |                   if (sensor_th1.connected){
      |                                 ^
../Core/Src/main.c:118:48: error: request for member 'Thx_celcius' in something not a structure or union
  118 |                           Th1_temp = sensor_th1.Thx_celcius;
      |                                                ^
../Core/Src/main.c: In function 'InitThermocouple1':
../Core/Src/main.c:144:21: error: request for member 'Thx_CS_Pin' in something not a structure or union
  144 |           sensor_th1.Thx_CS_Pin = GPIO_PIN_0;                   // CS Pin
      |                     ^
../Core/Src/main.c:145:21: error: request for member 'Thx_CS_Port' in something not a structure or union
  145 |           sensor_th1.Thx_CS_Port = GPIOB;       // CS GPIO PORT
      |                     ^
../Core/Src/main.c:146:21: error: request for member 'hspi' in something not a structure or union
  146 |           sensor_th1.hspi = &hspi2;                                             // SPI2
      |                     ^
make: *** [Core/Src/subdir.mk:34: Core/Src/main.o] Error 1
"make -j8 all" terminated with exit code 2. Build might be incomplete.

14:22:32 Build Failed. 7 errors, 1 warnings. (took 836ms)

